--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
-.App{
+.app{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100vw;
     height: 100vh;
 }
