--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 50px;
     width: 100vw;
     height: 100vh;
 }
