--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     padding: 50px;
+    margin: auto;
     width: 100vw;
     height: 100vh;
 }
